# compression_algorithms

./: .gitignore  CMakeLists.txt  README.md
leb128/src/: leb128.h
leb128/test/: test.cpp
run_length_encoding/: CMakeLists.txt
run_length_encoding/src/: run_length_encoding.h
run_length_encoding/test/: test.cpp
run_length_encoding/tests/: test.cpp
